Bug 87968 - Assertion failed: false, file /tmp/pkgsrc/misc/libreoffice4/work/libreoffice-4.3.5.2/sal/rtl/strtmpl.cxx, line 1231, function rtl_uString_newFromSubStrin
Summary: Assertion failed: false, file /tmp/pkgsrc/misc/libreoffice4/work/libreoffice-...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.5.2 release
Hardware: x86 (IA32) Solaris
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.3.6 target:4.4...
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2015-01-02 14:54 UTC by Richard PALO
Modified: 2015-01-05 20:30 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
bt with debug symbols (7.47 KB, text/plain)
2015-01-02 23:05 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard PALO 2015-01-02 14:54:08 UTC
Just came across this while attempting to uppercase a selected substring in a cell:

warn:sfx.control:101589:1:sfx2/source/control/dispatch.cxx:1505: Childwindow slot missing: 10365
warn:sfx.control:101589:1:sfx2/source/control/dispatch.cxx:1505: Childwindow slot missing: 10365
warn:sfx.control:101589:1:sfx2/source/control/dispatch.cxx:1505: Childwindow slot missing: 10365
Assertion failed: false, file /tmp/pkgsrc/misc/libreoffice4/work/libreoffice-4.3.5.2/sal/rtl/strtmpl.cxx, line 1231, function rtl_uString_newFromSubString

which is here:
    if ( count < 0 || beginIndex < 0 || beginIndex + count > pFrom->length )
    {
        assert(false); // fail fast at least in debug builds
        IMPL_RTL_STRINGNAME( newFromLiteral )( ppThis, "!!br0ken!!", 10, 0 );
        return;
    }

It'll be a bit before I can try to get here in debug, at least I'm running debug bits to get some useful info.
Comment 1 Richard PALO 2015-01-02 15:06:14 UTC
This is unfortunate, as instead of upcasing (a word containing an 'é') I thought I would try to simply insert the special character... but doing that I get :

warn:sfx.control:101840:1:sfx2/source/control/dispatch.cxx:1505: Childwindow slot missing: 10365
Assertion failed: eBlockStart == eBlockEnd && eBlockStart == eBlock, file /tmp/pkgsrc/misc/libreoffice4/work/libreoffice-4.3.5.2/svx/source/dialog/charmap.cxx, line 1472, function InitList

which corresponds to:
#if OSL_DEBUG_LEVEL > 0
            if (eBlock != UBLOCK_NO_BLOCK &&
                eBlock != UBLOCK_INVALID_CODE &&
                eBlock != UBLOCK_COUNT &&
                eBlock != UBLOCK_HIGH_SURROGATES &&
                eBlock != UBLOCK_HIGH_PRIVATE_USE_SURROGATES &&
                eBlock != UBLOCK_LOW_SURROGATES)

            {
                UBlockCode eBlockStart = ublock_getCode(aAllSubsets.back().GetRangeMin());
                UBlockCode eBlockEnd = ublock_getCode(aAllSubsets.back().GetRangeMax());
                assert(eBlockStart == eBlockEnd && eBlockStart == eBlock);
            }
#endif
        }



Not having much luck today. If it turns out the the fundamental cause is different for these, I guess this one should then be object of an different
bug report.
Comment 2 Julien Nabet 2015-01-02 23:05:01 UTC
Created attachment 111676 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
I attached a bt with symbols.
Comment 3 Julien Nabet 2015-01-03 17:04:42 UTC
Patch submitted for review here:
https://gerrit.libreoffice.org/#/c/13724/
Comment 4 Commit Notification 2015-01-05 09:23:39 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=31de7888660f551597263413bfdf467aade36680

Resolves fdo#87968 : Assertion failed: false rtl_uString_newFromSubString

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-01-05 20:28:37 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a779652a28d538184eb7fd8f4117ae9882feab9&h=libreoffice-4-3

Resolves fdo#87968 : Assertion failed: false rtl_uString_newFromSubString

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-01-05 20:30:02 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f287dc7e6e59b61c944d6ab39ab117d19b8179f&h=libreoffice-4-4

Resolves fdo#87968 : Assertion failed: false rtl_uString_newFromSubString

It will be available in 4.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.