Resolves fdo#87968 : Assertion failed: false rtl_uString_newFromSubString

aNewText already contains the good string so calling copy method is wrong
(same pb for i18n::TransliterationModulesExtra::TITLE_CASE and
i18n::TransliterationModulesExtra::SENTENCE_CASE)

Change-Id: Ifce92f33e98af3a58a70d25da9c60cf3d584a001
Reviewed-on: https://gerrit.libreoffice.org/13724
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>