editeng/source/editeng/impedit4.cxx
@@ -2818,7 +2818,7 @@ EditSelection ImpEditEngine::TransliterateText( const EditSelection& rSelection,
                         GetLanguage( EditPaM( pNode, nCurrentStart + 1 ) ),
                         nCurrentStart, nLen, &aOffsets ));
 
-                if (aNodeStr != aNewText.copy( nCurrentStart, nLen ))
+                if (aNodeStr != aNewText)
                 {
                     aChgData.nStart     = nCurrentStart;
                     aChgData.nLen       = nLen;
@@ -2906,7 +2906,7 @@ EditSelection ImpEditEngine::TransliterateText( const EditSelection& rSelection,
                         GetLanguage( EditPaM( pNode, nCurrentStart + 1 ) ),
                         nCurrentStart, nLen, &aOffsets ));
 
-                if ( aNodeStr != aNewText.copy( nCurrentStart, nLen ))
+                if (aNodeStr != aNewText)
                 {
                     aChgData.nStart     = nCurrentStart;
                     aChgData.nLen       = nLen;
@@ -2944,7 +2944,7 @@ EditSelection ImpEditEngine::TransliterateText( const EditSelection& rSelection,
                 Sequence< sal_Int32 > aOffsets;
                 OUString aNewText( aTransliterationWrapper.transliterate( aNodeStr, nLanguage, nCurrentStart, nLen, &aOffsets ) );
 
-                if (aNodeStr != aNewText.copy( nCurrentStart, nLen ))
+                if (aNodeStr != aNewText)
                 {
                     aChgData.nStart     = nCurrentStart;
                     aChgData.nLen       = nLen;
